--- a/docSite/content/docs/development/upgrading/481.md
+++ b/docSite/content/docs/development/upgrading/481.md
@@ -9,7 +9,7 @@ weight: 823
 
 ## 初始化脚本
 
-从任意终端，发起 1 个 HTTP 请求。其中 {{rootkey}} 替换成环境变量里的 `rootkey`；{{host}} 替换成FastGPT的域名。
+从任意终端，发起 1 个 HTTP 请求。其中 {{rootkey}} 替换成环境变量里的 `rootkey`；{{host}} 替换成FastGPT绑定的域名。
 
 ```bash
 curl --location --request POST 'https://{{host}}/api/admin/initv481' \
@@ -37,7 +37,7 @@ curl --location --request POST 'https://{{host}}/api/admin/clearInvalidData' \
 1. 新增 - 知识库重新选择向量模型重建
 2. 新增 - 对话框支持问题模糊检索提示，可自定义预设问题词库。
 3. 新增 - 工作流节点版本变更提示，并可以同步最新版本配置，避免存在隐藏脏数据。
-4. 新增 - 开放文件导入知识库接口到开源版， [点击插件文档](/docs/development/openapi/dataset/#创建一个文件集合)
+4. 新增 - 开放文件导入知识库接口到开源版， [点击查看文档](/docs/development/openapi/dataset/#创建一个文件集合)
 5. 新增 - 外部文件源知识库, [点击查看文档](/docs/course/externalfile/)
 6. 优化 - 插件输入的 debug 模式，支持全量参数输入渲染。
 7. 修复 - 插件输入默认值被清空问题。
